<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Route">

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@+id/textName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textStartPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textStartPoint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintLeft_toLeftOf="@+id/txtName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/txtStartPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtStartPoint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@+id/textStartPoint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textFeature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textFeature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textName"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textLoop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLoop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFeature"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@id/textLoop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFeature"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textFlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textFlat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintLeft_toRightOf="@id/textOut"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFeature"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textHilly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHilly"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@id/textFlat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFeature"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textStreet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLoop"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textTrail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTrail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@id/textLoop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLoop"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textSurface1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSurface1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="@id/textFlat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFlat"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textSurface2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSurface2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@id/textSurface1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFlat"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEasy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStreet"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textModerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textModerate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@+id/textEasy"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStreet"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textDifficult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textDifficult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@id/textModerate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStreet"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textEasy"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textEasy"
        app:layout_constraintVertical_bias="0.057" />

    <EditText
        android:id="@+id/txtNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textNote"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNote"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="140sp"
        android:layout_height="56sp"
        android:layout_marginBottom="20sp"
        android:text="@+id/cancel"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNote"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/startWalk"
        android:layout_width="140sp"
        android:layout_height="56sp"
        android:layout_marginBottom="20sp"
        android:text="@+id/startWalk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="@+id/textFlat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNote"
        app:layout_constraintVertical_bias="0.04" />


</androidx.constraintlayout.widget.ConstraintLayout>